@@ -112,6 +112,7 @@ dfhack_plugin(dig-now dig-now.cpp LINK_LIBRARIES lua)
 #dfhack_plugin(embark-tools embark-tools.cpp)
 dfhack_plugin(eventful eventful.cpp LINK_LIBRARIES lua)
 dfhack_plugin(fastdwarf fastdwarf.cpp)
+dfhack_plugin(faststart faststart.cpp)
 dfhack_plugin(filltraffic filltraffic.cpp)
 #dfhack_plugin(fix-unit-occupancy fix-unit-occupancy.cpp)
 #dfhack_plugin(fixveins fixveins.cpp)
